Fixed blue-text on iphone

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -209,6 +209,7 @@ margin: auto;
 	font-size: 25px;
 	font-weight: 700;
 	margin: 10px;
+    color: var(--black);
 }
 
 #load-more-btn:hover,
@@ -270,7 +271,7 @@ margin: auto;
 	max-height: 65vh;
 }
   
-  .close {
+.close {
     color: white;
     position: absolute;
     top: 10px;
@@ -278,6 +279,15 @@ margin: auto;
     font-size: 30px;
     cursor: pointer;
   }
+
+.search,
+#author-select,
+#sort-select {
+    height: 35px;
+    font-size: 15px;
+}
+
+
 
 /* Contact page */
 
